--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
   <div id="my_view">
-      <p>{{ origin | json }}</p>
+      <p>{{ origin | json }} commit test!</p>
   </div>
     <!--<div id="app">
         {{ message }}
