--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
   <div id="my_view">
-      <p>{{ origin | json }} commit test!</p>
+      <p>{{ origin | json }} </p>
   </div>
     <!--<div id="app">
         {{ message }}
@@ -53,7 +53,7 @@
 
     <div id="wrapper">
         <h1><%= title %></h1>
-        <h3>Welcome to AR enhancing physical Reality with the digital contents <%= title %></h3>
+        <h3>commit test! <%= title %></h3>
         <header>
             <section id="app-search">
                 <form>
